kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gatus.home-operations.com/endpoint: |
      url: https://grafana.hayden.moe/healthz
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - grafana.hayden.moe
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
